--- a/package.json
+++ b/package.json
@@ -11,22 +11,26 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "eslint": "^8.47.0"
-  },
-  "dependencies": {
     "@babel/core": "^7.22.10",
     "@rollup/plugin-alias": "^5.0.0",
     "@rollup/plugin-commonjs": "^25.0.4",
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.2.0",
+    "autoprefixer": "^10.4.15",
     "chalk": "^5.3.0",
+    "cssnano": "^6.0.1",
+    "eslint": "^8.47.0",
     "fs-extra": "^11.1.1",
     "install": "^0.13.0",
     "mime-types": "^2.1.35",
     "npm": "^9.8.1",
+    "postcss": "^8.4.28",
     "rollup": "^3.28.0",
     "rollup-plugin-alias": "^2.2.0",
     "rollup-plugin-cleanup": "^3.2.1",
-    "sweetalert": "^2.1.2"
+    "rollup-plugin-postcss": "^4.0.2"
+  },
+  "dependencies": {
+    "sweetalert2": "^11.7.25"
   }
 }
