--- a/jsconfig.json
+++ b/jsconfig.json
@@ -6,16 +6,14 @@
             "@/*": [
                 "src/*"
             ],
-            "$script/*": [
-                "src/script/*"
+            "#/*": [
+                "./*"
             ],
-            "$tool/*": [
-                "src/tool/*"
-            ]
         },
         "resolveJsonModule": true
     },
     "include": [
-        "src/"
-    ]
+        "src/",
+        "types/"
+    ],
 }
