--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "bookmark-script-builder",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "type": "module",
   "description": "收藏夹/书签脚本打包工具",
   "main": "main.js",
   "scripts": {
-    "build": "node main.js",
-    "lint:fix": "eslint --fix --ext .js ."
+    "build": "node main.js --mode=prod",
+    "build:dev": "node main.js --mode=dev",
+    "eslint:fix": "eslint --fix --ext .js ."
   },
   "keywords": [],
-  "author": "",
+  "author": "xiaohuohumax",
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.22.10",
@@ -17,19 +18,23 @@
     "@rollup/plugin-commonjs": "^25.0.4",
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.2.0",
+    "@rollup/plugin-replace": "^5.0.2",
     "@rollup/plugin-terser": "^0.4.3",
     "autoprefixer": "^10.4.15",
     "chalk": "^5.3.0",
     "cssnano": "^6.0.1",
+    "dotenv": "^16.3.1",
+    "dotenv-parse-variables": "^2.0.0",
     "eslint": "^8.47.0",
+    "eslint-plugin-import": "^2.28.1",
     "fs-extra": "^11.1.1",
     "install": "^0.13.0",
     "mime-types": "^2.1.35",
+    "minimist": "^1.2.8",
     "npm": "^9.8.1",
     "postcss": "^8.4.28",
     "postcss-import": "^15.1.0",
-    "rollup": "^3.28.0",
-    "rollup-plugin-alias": "^2.2.0",
+    "rollup": "^3.28.1",
     "rollup-plugin-cleanup": "^3.2.1",
     "rollup-plugin-postcss": "^4.0.2"
   },
@@ -39,8 +44,9 @@
     "js-cookie": "^3.0.5",
     "jszip": "github:Stuk/jszip",
     "lodash": "^4.17.21",
+    "loglevel": "^1.8.1",
     "notiflix": "^3.2.6",
     "p-limit": "^4.0.0",
-    "sweetalert2": "^11.7.25"
+    "sweetalert2": "^11.7.27"
   }
 }
