--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "bookmark:dev": "pnpm -C packages/bookmark run dev",
     "bookmark-script:dev": "pnpm -C packages/bookmark-script run dev",
-    "examples:build": "pnpm -C examples/build-bookmark-script run build",
+    "examples:build": "pnpm -r --filter=./examples/** --stream run build",
     "build": "pnpm -r --filter=./packages/** --stream run build",
     "clear": "rimraf -g **/node_modules **/dist",
     "lint:fix": "eslint --fix --ext .ts,.js .",
