--- a/packages/bookmark-script/package.json
+++ b/packages/bookmark-script/package.json
@@ -27,7 +27,6 @@
     "bookmark-script": "bookmark-script.mjs"
   },
   "dependencies": {
-    "@xiaohuohumax/bookmark": "workspace:^",
     "@babel/core": "^7.24.0",
     "@babel/preset-typescript": "^7.23.3",
     "@rollup/plugin-alias": "^5.1.0",
@@ -42,6 +41,7 @@
     "@types/mime-types": "^2.1.4",
     "@types/progress": "^2.0.7",
     "@types/yargs": "^17.0.32",
+    "@xiaohuohumax/bookmark": "workspace:^",
     "chalk": "^5.3.0",
     "dotenv": "^16.4.5",
     "dotenv-parse-variables": "^2.0.0",
@@ -50,6 +50,7 @@
     "progress": "^2.0.3",
     "rimraf": "^5.0.5",
     "rollup": "^4.12.1",
+    "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-dts": "^6.1.0",
     "rollup-plugin-esbuild": "^6.1.1",
     "tslib": "^2.6.2",
