--- a/packages/bookmark-script/tsconfig.json
+++ b/packages/bookmark-script/tsconfig.json
@@ -1,5 +1,12 @@
 {
   "extends": "../../tsconfig.base.json",
+  "compilerOptions": {
+    "lib": [
+      "DOM",
+      "DOM.Iterable",
+      "ESNext"
+    ]
+  },
   "include": [
     "src/**/*",
     "*.d.ts",
