--- a/packages/bookmark/package.json
+++ b/packages/bookmark/package.json
@@ -36,6 +36,7 @@
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-terser": "^0.4.4",
+    "@xiaohuohumax/rollup-plugin-raw": "^0.0.1",
     "rollup": "^4.12.1",
     "rollup-plugin-dts": "^6.1.0",
     "rollup-plugin-esbuild": "^6.1.1"
