--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "keywords": [
     "bookmark",
     "builder",
-    "script"
+    "script",
+    "bookmarklet",
+    "npm create"
   ],
   "author": "xiaohuohumax",
   "license": "MIT",
